Added responsive menu for small screens

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,19 @@
 
+
+<div data-sticky-container class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+  <button class="menu-icon" type="button" data-toggle="example-menu"></button>
+  <div class="title-bar-title">Bike Hub</div>
+</div>
+
 <div data-sticky-container>
-  <div class="title-bar hyapps-menu-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1">
+  <div class="title-bar hyapps-menu-bar" id="example-menu" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1">
     <div class="title-bar-left">
-      <ul class="menu">
-        <li class="menu-text">High Speed</li>
+      <ul class="menu hide-for-small-only">
+        <li class="menu-text">Bike Hub</li>
       </ul>
     </div>
-    <div class="title-bar-right">
-     <ul class="menu" data-magellan>
+    <div class="title-bar-right" data-dropdown-menu>
+     <ul class="menu vertical medium-horizontal" data-magellan>
       <li><a data-scroll href="#home">Home</a></li>
       <li><a data-scroll href="#about">About</a></li>
       <li><a data-scroll href="#products">Products</a></li>
